6-example/echo.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: staging
spec:
  selector:
    matchLabels:
      app: echoserver
  replicas: 1
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
      - image: k8s.gcr.io/e2e-test-images/echoserver:2.5
        name: echoserver
        ports:
        - containerPort: 8080
---


# apiVersion: v1
# kind: Service
# metadata:
#   name: echoserver
#   namespace: staging
#   annotations:
#     service.beta.kubernetes.io/aws-load-balancer-type: nlb
#     service.beta.kubernetes.io/aws-load-balancer-internal: "true"
# spec:
#   ports:
#   - port: 8080
#     protocol: TCP
#   type: LoadBalancer
#   selector:
#     app: echoserver
